instance name update